Split server from client and implement TCP_FASTOPEN
Create different directories for redis client and server lambdas.

Make redis client initiate connections with TCP_FASTOPEN.

Signed-off-by: Kostis Kaffes <kkaffes@stanford.edu>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-redis-server
-app.zip
-redis/*.pyc
+server-lambda/redis-server
+server-lambda/app.zip
+client-lambda/app.zip
+client-lambda/redis/*.pyc
