--- a/server-lambda/redis.conf
+++ b/server-lambda/redis.conf
@@ -89,7 +89,7 @@ protected-mode no
 
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
-port 0
+port 6379
 
 # TCP listen() backlog.
 #
@@ -106,7 +106,7 @@ tcp-backlog 511
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
 #
-unixsocket /tmp/redis.sock
+# unixsocket /tmp/redis.sock
 # unixsocketperm 700
 
 # Close the connection after a client is idle for N seconds (0 to disable)
